tests/unused_promise/unused_promise.exp
Error ------------------------------------------------------------------------------------------------------ test.js:9:5

`Promise` in async scope is unused. Did you mean to `await` it? [unused-promise]

   9|     foo(); // error
          ^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:11:5

`Promise` in async scope is unused. Did you mean to `await` it? [unused-promise]

   11|     bar(); // error
           ^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:32:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   32|     foo(); // error
           ^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:33:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   33|     foo().then(() => {}); // error
           ^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:34:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   34|     foo().then(() => {}).then(() => {}); // error
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:38:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   38|     b && foo(); // error
           ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:39:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   39|     b && foo() && b; // error
           ^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:40:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   40|     b && b && foo(); // error
           ^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:41:5

This condition is likely truthy. Perhaps you meant to use `await` to resolve the promise?
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   test.js:41:5
   41|     foo() && foo(); // error
           ^^^^^

References:
   test.js:1:25
    1| declare function foo(): Promise<void>;
                               ^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:41:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   41|     foo() && foo(); // error
           ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:42:5

This condition is likely truthy. Perhaps you meant to use `await` to resolve the promise?
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   test.js:42:5
     42|     foo().catch(() => {}) && foo(); // error
             ^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:2319:8
   2319|     ): Promise<R | U>;
                ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:42:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   42|     foo().catch(() => {}) && foo(); // error
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:43:5

This condition is likely truthy. Perhaps you meant to use `await` to resolve the promise?
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   test.js:43:5
   43|     foo() && foo().catch(() => {}); // error
           ^^^^^

References:
   test.js:1:25
    1| declare function foo(): Promise<void>;
                               ^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:43:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   43|     foo() && foo().catch(() => {}); // error
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:52:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   52|     b ? foo() : 3; // error
           ^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:53:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   53|     b ? 3 : foo(); // error
           ^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:66:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   66|     x.foo(); // error
           ^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:67:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   67|     x.bar(); // error
           ^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:81:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   81|     x?.foo(); // error
           ^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:82:5

`Promise` in sync scope is unused. Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   82|     x?.bar(); // error
           ^^^^^^^^^



Found 20 errors
